# pyxis

./: CLAUDE.md  Cargo.toml  Makefile  README.md
examples/: bench_metal.rs
src/: attention.rs  display.rs  embedding.rs  ffn.rs  gguf.rs  kv_cache.rs  lib.rs  main.rs  matmul.rs  metal_matmul.rs  model.rs  output_head.rs  rmsnorm.rs  safetensors.rs  sampler.rs  tokenizer.rs  transformer.rs  weights.rs
tests/: gguf.rs  metal_matmul.rs  tokenizer.rs
