[package]
name = "pyxis"
version = "0.1.0"
edition = "2024"

[dependencies]
half = "2"
memmap2 = "0.9"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.33"
objc = "0.2"

[dev-dependencies]
tempfile = "3"
